new copy from nicole, auto set section min-heights, bug fix for "obj not defined" error on about

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="copy">
 					<div class="col-sm-5 col-sm-offset-7">
 					<h2>This project exists to help save lives.</h2>
-					<h3>One tweak, thrust, heave, and pant at a time</h3>
+					<h3>One tweak, thrust, moan, and pant at a time.</h3>
 				</div>
 				</div>
 				<div class="about-navigation">
@@ -96,11 +96,10 @@
 			<div id="two" class="two row">
 				<div class="copy">
 					<div class="col-sm-6">
-						<h2>Before the What, <em>the Why.</em></h2>
+						<h2><em>Before the what, the why.</em></h2>
 						<p>Because fear of cancer can be as bad as cancer itself.<br>
 							Because 90% of cancer can be cured if checked by stage one.<br>
-							Beause fear, like cancer, may have the power to spread &mdash;<br>
-							but they both share one major weakness:</p>
+							Because fear, like cancer, may have the power to spread &mdash; but they both share one major weakness:</p>
 					</div>
 				</div>
 				<div class="about-navigation">
@@ -112,10 +111,8 @@
 			<div id="three" class="three row">
 				<div class="copy">
 					<div class="col-sm-6 col-sm-offset-6">
-						<h2>KNOWLEDGE.</h2>
-						<p>Because of all this, The Cancer Sutra is designed to challenge the taboos and conventions about cancer.<br>
-							Firstly by talking about how to look for cancer, not just find it.<br>
-							Secondly, by bringing the fight against cancer, and the prevention of it, out of a place of isolation.</p>
+						<h2><em>Knowledge.</em></h2>
+						<p>Because of all this, The Cancer Sutra is designed to challenge the taboos and conventions about cancer. Firstly by talking about how to look for cancer, not just find it. Secondly, by bringing the fight against cancer, and the prevention of it, out of a place of isolation.</p>
 					</div>
 				</div>
 				<div class="about-navigation">
@@ -127,8 +124,8 @@
 			<div id="four" class="four row">
 				<div class="copy">
 					<div class="col-sm-6">
-						<h2>After all, saving lives is <em>one thing.</em></h2>
-						<p>Having fun while doing it &mdash; well, that's something we can all get behind. (Or in front of, depending.)</p>
+						<h2></h2>
+						<p>After all, saving lives is one thing. Having fun while doing it &mdash; well, that’s something we can all get behind. (Or in front of, depending.)</p>
 					</div>
 				</div>
 				<div class="about-navigation">
@@ -139,8 +136,8 @@
 			</div>
 			<div id="five" class="five row">
 				<div class="copy">
-					<p>It's time we got to the real thrust of the matter.</p>
-					<a class="hvr-hang cs-button" href="#/positions">ONWARD &amp; UNDERWARD</a>
+					<p>But enough foreplay! Let’s get to the real thrust of the matter.</p>
+					<a class="hvr-hang cs-button" href="#/positions">ONWARD &amp; UNDERWARD &gt;</a>
 				</div>
 				<div style="display:none" class="about-navigation">
 					<img id="prev" src="img/desktop-arrow-up.png"/>
@@ -158,47 +155,39 @@
 					<div class="chapter-inner">
 							<div class="part1">
 								<img class="dropcap hidden-xs" src="img/dropcaps/B.svg">
-								<h2>Breast Cancer</h2>
-								<p>The skin is the largest of the body's organs (yes, men, even yours), which likely means the thought of memorizing every delicious curve, nook, and cranny has paralyzed your brain under the weight of this seemingly impossible task.</p>
-								<p>Never you fret.</p>
-								<p>You'll soon have your parner's every curve and swerve under both wraps and yourself.</p>
+								<h2>II. Breasts: An Easy Concept to Grasp</h2>
+								<p>Possibly the easiest of all places to commit to memory are the mammaries. But in the event your partner’s melons leave you scratching yours, this handy (pardon) guide should help you squeeze the most out of your (up-and–) downtime.</p>
+								<p>Just try the <strong>TWEAK</strong> method.</p>
 							</div>
 						<div class="part2">
-							<h3>Just remember to...</h3>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">T</div>
+									<div class="col-xs-10 words"><strong>Take</strong> a long look at your partner with their shoulders back and their arms on their hips, making sure their breasts are the usual size, shape, and color.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">W</div>
+									<div class="col-xs-10 words"><strong>Work</strong> the arms into a raised position, and look again for dimpling, puckering, discoloration, or movement or inversion of the nipples should be given professional attention.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">E</div>
+									<div class="col-xs-10 words"><strong>Eye</strong> the nipple for for any signs of fluid coming out of one or both nipples (this could be a watery, milky, or yellow fluid or blood).</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">A</div>
+									<div class="col-xs-10 words"><strong>Appraise</strong> the tissue of the breasts first with your partner lying down, then in a seated position, and always in a circular pattern to ensure you cover the whole of them.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
-								</div>
-							</div>
-							<div class="acrostic">
-								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">K</div>
+									<div class="col-xs-10 words"><strong>Keep</strong> exploring from a range of positions, such as sitting, standing, or even in the shower. Not only for the thoroughness this affords — but also for the fun.</div>
 								</div>
 							</div>
 						</div>
@@ -211,47 +200,33 @@
 					<div class="chapter-inner">
 						<div class="part1">
 							<img class="dropcap hidden-xs" src="img/dropcaps/T.svg">
-							<h2>Testicular Cancer</h2>
-							<p>The skin is the largest of the body's organs (yes, men, even yours), which likely means the thought of memorizing every delicious curve, nook, and cranny has paralyzed your brain under the weight of this seemingly impossible task.</p>
-							<p>Never you fret.</p>
-							<p>You'll soon have your parner's every curve and swerve under both wraps and yourself.</p>
+							<h2>III. Testicles: How to Hang with the Best of Them</h2>
+							<p>Tackling the testicles may seem like a handful. So if you find yourself concerned you might not have what it takes to judge a sack in the sack, we have just the technique for you.</p>
+							<p>Simply <strong>LICK</strong> the testicles.</p>
 						</div>
 						<div class="part2">
-							<h3>Just remember to...</h3>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">L</div>
+									<div class="col-xs-10 words"><strong>Look</strong> for enlargement, or swelling of the scrotal skin.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">I</div>
+									<div class="col-xs-10 words"><strong>Inspect</strong> one testicle at a time, rolling each one gently between your thumb and index finger. If you find one testicle is larger than the other, reserve your squeals for more pleasurable activities, for this is quite common.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">C</div>
+									<div class="col-xs-10 words"><strong>Check</strong> for bumps along the sides and front of the testicles. </div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
-								</div>
-							</div>
-							<div class="acrostic">
-								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
-								</div>
-							</div>
-							<div class="acrostic">
-								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">K</div>
+									<div class="col-xs-10 words"><strong>Know</strong> your epididymis &mdash; the soft, tubelike structure behind the testicles that collects and carries sperm. Lumps on or attached to the epididymis are quite normal.</div>
 								</div>
 							</div>
 						</div>
@@ -264,47 +239,47 @@
 					<div class="chapter-inner">
 						<div class="part1">
 							<img class="dropcap hidden-xs" src="img/dropcaps/S.svg">
-							<h2>Skin Cancer</h2>
-							<p>The skin is the largest of the body's organs (yes, men, even yours), which likely means the thought of memorizing every delicious curve, nook, and cranny has paralyzed your brain under the weight of this seemingly impossible task.</p>
+							<h2>I. Skin: The Naked, Sweating, Panting, Heaving Truth</h2>
+							<p>The skin is the largest of the body’s organs (yes, men, even yours). Which likely means the thought of memorizing every delicious curve, nook, and cranny has paralyzed your brain under the weight of this seemingly impossible task.</p>
 							<p>Never you fret.</p>
-							<p>You'll soon have your parner's every curve and swerve under both wraps and yourself.</p>
+							<p>You’ll soon have your partner’s every inch under both wraps and yourself.</p>
+							<p>All you need to do is roll up your sleeves, crack your knuckles, and get ready to <strong>FONDLE.</strong></p>
 						</div>
 						<div class="part2">
-							<h3>Just remember to...</h3>
 							<div class="acrostic">
 								<div class="row">
 									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-10 words"><strong>Find</strong> any marks or bumps on your partner’s body and try to memorize their general shape and size.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">O</div>
+									<div class="col-xs-10 words"><strong>Observe</strong> these marks over time for changes and alterations.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">N</div>
+									<div class="col-xs-10 words"><strong>Note</strong> any new marks or textures that might spring up. The color of melanoma can range anywhere from red to blue, to anywhere in between, but can also be without pigment. </div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">D</div>
+									<div class="col-xs-10 words"><strong>Determine</strong> the diameter. For while benign marks come in all sizes, “super” should not be one of them.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">L</div>
+									<div class="col-xs-10 words"><strong>Look</strong> for notches, grooves, asymmetry, or any other textural oddities. Benign marks are typically smooth, not rough or patchy.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">E</div>
+									<div class="col-xs-10 words"><strong>Engage</strong> the help of a medical professional, no matter how comfortable you may feel with your prognosis. There will never be a replacement for the opinion of a medical professional.</div>
 								</div>
 							</div>
 						</div>
@@ -317,47 +292,40 @@
 					<div class="chapter-inner">
 						<div class="part1">
 							<img class="dropcap hidden-xs" src="img/dropcaps/P.svg">
-							<h2>Prostate Cancer</h2>
-							<p>The skin is the largest of the body's organs (yes, men, even yours), which likely means the thought of memorizing every delicious curve, nook, and cranny has paralyzed your brain under the weight of this seemingly impossible task.</p>
-							<p>Never you fret.</p>
-							<p>You'll soon have your parner's every curve and swerve under both wraps and yourself.</p>
+							<h2>IV. Prostate: The Insider Edition</h2>
+							<p>The prostate leaves much to be desired in the accessibility department. At least, for self-exams.
+							<p>Thankfully, after reading this little guide, you and your partner will doubtless feel more equipped than ever to put your finger on all of the prostate’s delicacies.</p>
+							<p>Just remember to <strong>PROBE</strong> it.</p>
 						</div>
 						<div class="part2">
-							<h3>Just remember to...</h3>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">P</div>
+									<div class="col-xs-10 words"><strong>Position</strong> your partner for easy access to his most guarded asset.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">R</div>
+									<div class="col-xs-10 words"><strong>Rub</strong> an ample amount of lube onto your index or middle finger (or both, for those expert spelunkers among you).</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">O</div>
+									<div class="col-xs-10 words"><strong>Open</strong> the cheeks for uninhibited entry.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">B</div>
+									<div class="col-xs-10 words"><strong>Bring</strong> your extended, well-lubed digit in first as far as you can — then upward or downward (towards the belly button). There you will find the prostate.</div>
 								</div>
 							</div>
 							<div class="acrostic">
 								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
-								</div>
-							</div>
-							<div class="acrostic">
-								<div class="row">
-									<div class="col-xs-2 letter">F</div>
-									<div class="col-xs-10 words">Find any marks or bumps on your partner's body and try to memorize their general shape and size.</div>
+									<div class="col-xs-2 letter">E</div>
+									<div class="col-xs-10 words"><strong>Explore</strong> his prostate in gentle, circular motions. It should be firm and rubbery, but not hard, or cause pain.</div>
 								</div>
 							</div>
 						</div>
@@ -621,7 +589,9 @@
 			</div>
 		</section>
 		<section id="support">
-			<h1>Support the Cause</h1>
+			<h2>You’ve got to give some to get some.</h2>
+			<p>Support for The Cancer Sutra goes to XXXXX Cancer Society to help raise awareness, fund research, and spread the message about how early detection can help save lives. Please give whatever you can, keeping in mind that it’s not always the size of your contribution, but how you use it.</p>
+			<small>(All right, it’s a bit about the size, too.) </small>
 		</div>
 		<footer class="row uppercase">
 			<div class="col-md-1"></div>
