test gestures with toe.js

--- a/index.html
+++ b/index.html
@@ -628,9 +628,9 @@
 	<![endif]-->
 
 	<script src="js/assets/imagesloaded.pkgd.min.js"></script>
-	<!--<script src="js/assets/jquery.touchSwipe.min.js"></script>-->
+	<script src="js/assets/toe.min.js"></script>
 	<script src="js/assets/underscore-min.js"></script>
-	<script src="js/assets/jquery.mousewheel.min.js"></script>
+	<!--<script src="js/assets/jquery.mousewheel.min.js"></script>-->
 	<script src="js/assets/mousetrap.min.js"></script>
 	<script src="js/assets/jquery.onscreen.min.js"></script>
 	<script src="js/assets/snap.svg-min.js"></script>
