CS updates per email

--- a/index.html
+++ b/index.html
@@ -17,47 +17,44 @@
 	<script src="js/assets/modernizr-latest.js"></script>
 </head>
 <body class="loading container-fluid">
+	<div class="nav-closer">test</div>
 	<div class="nav-bar row">
 			<div class="device-menu">
 				<!--<a class="menu-toggle" href="#"><span></span></a>-->
 				<a class="menu-toggle">
-<svg class="inline-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="50px" height="50px" viewBox="3.5 4.5 30 35" xml:space="preserve">
-					<g class="svg-menu-toggle">
-
-					<path class="bar" d="M20.945,8.75c0,0.69-0.5,1.25-1.117,1.25H3.141c-0.617,0-1.118-0.56-1.118-1.25l0,0
-						c0-0.69,0.5-1.25,1.118-1.25h16.688C20.445,7.5,20.945,8.06,20.945,8.75L20.945,8.75z">
-					</path>
-					<path class="bar" d="M20.923,15c0,0.689-0.501,1.25-1.118,1.25H3.118C2.5,16.25,2,15.689,2,15l0,0c0-0.689,0.5-1.25,1.118-1.25 h16.687C20.422,13.75,20.923,14.311,20.923,15L20.923,15z">
-					</path>
-					<path class="bar" d="M20.969,21.25c0,0.689-0.5,1.25-1.117,1.25H3.164c-0.617,0-1.118-0.561-1.118-1.25l0,0
-						c0-0.689,0.5-1.25,1.118-1.25h16.688C20.469,20,20.969,20.561,20.969,21.25L20.969,21.25z">
-					</path>
-          <rect width="20" height="20" fill="none">
-
-					</rect>
-					</g>
-
-		</svg>
-</a>
-				<h1>The Cancer Sutra</h1>
+					<svg class="inline-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+						 width="50px" height="50px" viewBox="3.5 4.5 30 35" xml:space="preserve">
+						<g class="svg-menu-toggle">
+							<path class="bar" d="M20.945,8.75c0,0.69-0.5,1.25-1.117,1.25H3.141c-0.617,0-1.118-0.56-1.118-1.25l0,0
+								c0-0.69,0.5-1.25,1.118-1.25h16.688C20.445,7.5,20.945,8.06,20.945,8.75L20.945,8.75z">
+							</path>
+							<path class="bar" d="M20.923,15c0,0.689-0.501,1.25-1.118,1.25H3.118C2.5,16.25,2,15.689,2,15l0,0c0-0.689,0.5-1.25,1.118-1.25 h16.687C20.422,13.75,20.923,14.311,20.923,15L20.923,15z">
+							</path>
+							<path class="bar" d="M20.969,21.25c0,0.689-0.5,1.25-1.117,1.25H3.164c-0.617,0-1.118-0.561-1.118-1.25l0,0
+								c0-0.689,0.5-1.25,1.118-1.25h16.688C20.469,20,20.969,20.561,20.969,21.25L20.969,21.25z">
+							</path>
+						<rect width="20" height="20" fill="none"></rect>
+						</g>
+					</svg>
+				</a>
+				<h1><a href="#/positions">The Cancer Sutra</a></h1>
 			</div>
 			<!--<div class="foreplay"><a href="#/positions">Enough Foreplay!  &#10140;</a></div>-->
 		</div>
 	<div class="wrapper">
 		<nav class="row">
 			<ul class="navigation">
-				<li><a class="nav-about" href="#">About</a></li>
+				<li class="double-underline"><a class="nav-about" href="#">About</a></li>
 				<li><a class="nav-positions" href="#/positions">All Positions</a></li>
 			</ul>
 			<div class="filters">
 				<div data-filter-type="cancer-type" class="filter cancer-type">
 					<h3>Filter by Cancer Type</h3>
 					<ul class="uppercase">
-						<li><a href data-filter-type="cancer-type" data-filter="skin" data-toggle="off">Skin</a></li>
-						<li><a href data-filter-type="cancer-type" data-filter="breast" data-toggle="off">Breast</a></li>
-						<li><a href data-filter-type="cancer-type" data-filter="testicular" data-toggle="off">Testicular</a></li>
-						<li><a href data-filter-type="cancer-type" data-filter="prostate" data-toggle="off">Prostate</a></li>
+						<li><a href="#/chapters/skin" data-filter-type="cancer-type" data-filter="skin" data-toggle="off">Skin</a></li>
+						<li><a href="#/chapters/breast" data-filter-type="cancer-type" data-filter="breast" data-toggle="off">Breast</a></li>
+						<li><a href="#/chapters/testicular" data-filter-type="cancer-type" data-filter="testicular" data-toggle="off">Testicular</a></li>
+						<li class="double-underline"><a href="#/chapters/prostate" data-filter-type="cancer-type" data-filter="prostate" data-toggle="off">Prostate</a></li>
 					</ul>
 				</div>
 			</div>
@@ -84,8 +81,9 @@
 			<div id="one" class="one row onScreen">
 				<div class="copy">
 					<div class="col-sm-5 col-sm-offset-7">
-					<h2>This project exists to help save lives.</h2>
-					<h3>One tweak, thrust, moan, and pant at a time.</h3>
+					<h2>This project exists<br>
+						to help save lives.</h2>
+					<h3>(One tweak, thrust, moan, and pant at a time.)</h3>
 				</div>
 				</div>
 				<div class="about-navigation">
@@ -99,7 +97,7 @@
 						<h2><em>Before the what, the why.</em></h2>
 						<p>Because fear of cancer can be as bad as cancer itself.<br>
 							Because 90% of cancer can be cured if checked by stage one.<br>
-							Because fear, like cancer, may have the power to spread &mdash; but they both share one major weakness:</p>
+							Because fear, like cancer, may have the power to spread<br>&mdash; but they both share one major weakness:</p>
 					</div>
 				</div>
 				<div class="about-navigation">
@@ -124,8 +122,9 @@
 			<div id="four" class="four row">
 				<div class="copy">
 					<div class="col-sm-6">
-						<h2></h2>
-						<p>After all, saving lives is one thing. Having fun while doing it &mdash; well, that’s something we can all get behind. (Or in front of, depending.)</p>
+						<h2>After all, saving lives is <em>one thing.</em></h2>
+						<p>Having fun while doing it &mdash; well, that’s something<br>
+							we can all get behind. (Or in front of, depending.)</p>
 					</div>
 				</div>
 				<div class="about-navigation">
@@ -136,8 +135,13 @@
 			</div>
 			<div id="five" class="five row">
 				<div class="copy">
-					<p>But enough foreplay! Let’s get to the real thrust of the matter.</p>
-					<a class="hvr-hang cs-button" href="#/positions">ONWARD &amp; UNDERWARD &gt;</a>
+					<div class="row">
+						<div class="col-sm-6 col-sm-offset-3">
+							<h2>But enough foreplay!<br>
+								Let’s get to the real <em>thrust</em> of the matter.</h2>
+							<a class="hvr-hang cs-button" href="#/positions">ONWARD &amp; UNDERWARD</a>
+						</div>
+					</div>
 				</div>
 				<div style="display:none" class="about-navigation">
 					<img id="prev" src="img/desktop-arrow-up.png"/>
@@ -155,7 +159,7 @@
 					<div class="chapter-inner">
 							<div class="part1">
 								<img class="dropcap hidden-xs" src="img/dropcaps/B.svg">
-								<h2>II. Breasts: An Easy Concept to Grasp</h2>
+								<h2>Breasts: An Easy Concept to Grasp</h2>
 								<p>Possibly the easiest of all places to commit to memory are the mammaries. But in the event your partner’s melons leave you scratching yours, this handy (pardon) guide should help you squeeze the most out of your (up-and–) downtime.</p>
 								<p>Just try the <strong>TWEAK</strong> method.</p>
 							</div>
@@ -192,7 +196,7 @@
 							</div>
 						</div>
 						<div class="expand">
-							<img class="open" src="img/desktop-arrow-up.png"/><img class="closed" src="img/desktop-arrow-down.png"/>
+							<img class="open hvr-bob" src="img/desktop-arrow-up.png"/><img class="closed hvr-hang" src="img/desktop-arrow-down.png"/>
 						</div>
 					</div>
 				</div>
@@ -200,7 +204,7 @@
 					<div class="chapter-inner">
 						<div class="part1">
 							<img class="dropcap hidden-xs" src="img/dropcaps/T.svg">
-							<h2>III. Testicles: How to Hang with the Best of Them</h2>
+							<h2>Testicles: How to Hang with the Best of Them</h2>
 							<p>Tackling the testicles may seem like a handful. So if you find yourself concerned you might not have what it takes to judge a sack in the sack, we have just the technique for you.</p>
 							<p>Simply <strong>LICK</strong> the testicles.</p>
 						</div>
@@ -231,7 +235,7 @@
 							</div>
 						</div>
 						<div class="expand">
-							<img class="open" src="img/desktop-arrow-up.png"/><img class="closed" src="img/desktop-arrow-down.png"/>
+							<img class="open hvr-bob" src="img/desktop-arrow-up.png"/><img class="closed hvr-hang" src="img/desktop-arrow-down.png"/>
 						</div>
 					</div>
 				</div>
@@ -239,7 +243,7 @@
 					<div class="chapter-inner">
 						<div class="part1">
 							<img class="dropcap hidden-xs" src="img/dropcaps/S.svg">
-							<h2>I. Skin: The Naked, Sweating, Panting, Heaving Truth</h2>
+							<h2>Skin: The Naked, Sweating, Panting, Heaving Truth</h2>
 							<p>The skin is the largest of the body’s organs (yes, men, even yours). Which likely means the thought of memorizing every delicious curve, nook, and cranny has paralyzed your brain under the weight of this seemingly impossible task.</p>
 							<p>Never you fret.</p>
 							<p>You’ll soon have your partner’s every inch under both wraps and yourself.</p>
@@ -284,7 +288,7 @@
 							</div>
 						</div>
 						<div class="expand">
-							<img class="open" src="img/desktop-arrow-up.png"/><img class="closed" src="img/desktop-arrow-down.png"/>
+							<img class="open hvr-bob" src="img/desktop-arrow-up.png"/><img class="closed hvr-hang" src="img/desktop-arrow-down.png"/>
 						</div>
 					</div>
 				</div>
@@ -292,7 +296,7 @@
 					<div class="chapter-inner">
 						<div class="part1">
 							<img class="dropcap hidden-xs" src="img/dropcaps/P.svg">
-							<h2>IV. Prostate: The Insider Edition</h2>
+							<h2>Prostate: The Insider Edition</h2>
 							<p>The prostate leaves much to be desired in the accessibility department. At least, for self-exams.
 							<p>Thankfully, after reading this little guide, you and your partner will doubtless feel more equipped than ever to put your finger on all of the prostate’s delicacies.</p>
 							<p>Just remember to <strong>PROBE</strong> it.</p>
@@ -325,12 +329,12 @@
 							<div class="acrostic">
 								<div class="row">
 									<div class="col-xs-2 letter">E</div>
-									<div class="col-xs-10 words"><strong>Explore</strong> his prostate in gentle, circular motions. It should be firm and rubbery, but not hard, or cause pain.</div>
+									<div class="col-xs-10 words"><strong>Explore</strong> his prostate in gentle, circular motions. It should be firm and rubbery, but not hard, or cause him pain.</div>
 								</div>
 							</div>
 						</div>
 						<div class="expand">
-							<img class="open" src="img/desktop-arrow-up.png"/><img class="closed" src="img/desktop-arrow-down.png"/>
+							<img class="open hvr-bob" src="img/desktop-arrow-up.png"/><img class="closed hvr-hang" src="img/desktop-arrow-down.png"/>
 						</div>
 					</div>
 				</div>
@@ -566,24 +570,28 @@
 					<h4>Not Titillated Yet?</h4>
 					<p>Well perk up!</p>
 					<p>A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze</p>
+					<br>
 					<a class="cs-button hvr-bob" href="#/support">Support the Cause</a>
 				</div>
 				<div data-cancer-type="testicular">
 					<h4>Not Titillated Yet?</h4>
 					<p>Well perk up!</p>
 					<p>A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze</p>
+					<br>
 					<a class="cs-button hvr-bob" href="#/support">Support the Cause</a>
 				</div>
 				<div data-cancer-type="skin">
 					<h4>Not Titillated Yet?</h4>
 					<p>Well perk up!</p>
 					<p>A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze</p>
+					<br>
 					<a class="cs-button hvr-bob" href="#/support">Support the Cause</a>
 				</div>
 				<div data-cancer-type="prostate">
 					<h4>Not Titillated Yet?</h4>
 					<p>Well perk up!</p>
 					<p>A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze</p>
+					<br>
 					<a class="cs-button hvr-bob" href="#/support">Support the Cause</a>
 				</div>
 			</div>
