--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 	<script src="js/assets/modernizr-latest.js"></script>
 </head>
 <body class="loading container-fluid">
-	<div class="nav-closer">test</div>
+	<div class="nav-closer"></div>
 	<div class="nav-bar row">
 			<div class="device-menu">
-				<!--<a class="menu-toggle" href="#"><span></span></a>-->
 				<a class="menu-toggle">
 					<svg class="inline-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 						 width="50px" height="50px" viewBox="3.5 4.5 30 35" xml:space="preserve">
@@ -63,18 +62,6 @@
 			</ul>
 		</nav>
 		<div class="loader">
-			<!--<svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-		     width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
-			  <path fill="#000" d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z">
-			    <animateTransform attributeType="xml"
-			      attributeName="transform"
-			      type="rotate"
-			      from="0 25 25"
-			      to="360 25 25"
-			      dur="1s"
-			      repeatCount="indefinite"/>
-			   </path>
-		  </svg>-->
 		  <img alt="" src="img/loader.svg">
 		</div>
 		<section id="about">
@@ -137,8 +124,9 @@
 				<div class="copy">
 					<div class="row">
 						<div class="col-sm-6 col-sm-offset-3">
-							<h2>But enough foreplay!<br>
-								Let’s get to the real <em>thrust</em> of the matter.</h2>
+							<h2>But enough foreplay!<br><br>
+								Let’s get to the real<br>
+								<em>thrust</em> of the matter.</h2><br>
 							<a class="hvr-hang cs-button" href="#/positions">ONWARD &amp; UNDERWARD</a>
 						</div>
 					</div>
@@ -564,7 +552,7 @@
 					</div>
 				</div>
 			</div>
-			<!--SUPPORT THE CAUSE-->
+			<!--SUPPORT THE CAUSE CTAs-->
 			<div id="support-the-cause" class="row">
 				<div data-cancer-type="breast">
 					<h4>Not Titillated Yet?</h4>
@@ -615,7 +603,7 @@
 				<img alt="" src="img/100x100.gif">
 			</div>
 			<div class="col-md-4 col-sm-4 acc">
-				<span>In Partnership with<br>The American Cancer Society</span>
+				<span>In Partnership with<br>XXXXXXXXXXXXXX</span>
 			</div>
 		</footer>
 	</div>
