attacked about swipe/arrow bug

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="loader">
 		  <img alt="" src="img/loader.svg">
 		</div>
-		<section id="about">
+		<section id="about" data-scroll-status="1" data-is-scrolling="false">
 			<div id="one" class="one row onScreen">
 				<div class="copy">
 					<div class="col-sm-5 col-sm-offset-7">
