edits from TBWH meeting

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="loader">
 		  <img alt="" src="img/loader.svg">
 		</div>
-		<section id="about" data-scroll-status="1" data-is-scrolling="false">
+		<section id="about" data-scroll-status="0" data-is-scrolling="false">
 			<div id="one" class="one row onScreen">
 				<div class="copy">
 					<div class="col-sm-5 col-sm-offset-7">
@@ -97,7 +97,7 @@
 				<div class="copy">
 					<div class="col-sm-6 col-sm-offset-6">
 						<h2><em>Knowledge.</em></h2>
-						<p>Because of all this, The Cancer Sutra is designed to challenge the taboos and conventions about cancer. Firstly by talking about how to look for cancer, not just find it. Secondly, by bringing the fight against cancer, and the prevention of it, out of a place of isolation.</p>
+						<p>Because of all this, The Cancer Sutra is designed to<br>challenge the taboos and conventions about cancer.<br>Firstly by talking about how to look for cancer, not just<br>find it. Secondly, by bringing the fight against cancer, and<br>the prevention of it, out of a place of isolation.</p>
 					</div>
 				</div>
 				<div class="about-navigation">
@@ -109,7 +109,7 @@
 			<div id="four" class="four row">
 				<div class="copy">
 					<div class="col-sm-6">
-						<h2>After all, saving lives is <em>one thing.</em></h2>
+						<h2>After all, saving lives<br>is <em>one thing.</em></h2>
 						<p>Having fun while doing it &mdash; well, that’s something<br>
 							we can all get behind. (Or in front of, depending.)</p>
 					</div>
@@ -575,6 +575,7 @@
 	<!--<script src="js/assets/jquery.mousewheel.min.js"></script>-->
 	<script src="js/assets/mousetrap.min.js"></script>
 	<script src="js/assets/jquery.onscreen.min.js"></script>
+	<script src="js/assets/easing-min.js"></script>
 	<script src="js/assets/snap.svg-min.js"></script>
 	<script src="js/assets/isotope.pkgd.min.js"></script>
 	<!--<script src="js/wow.min.js"></script>-->
